<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".AddEmployee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/emp_bsk_dtl"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/emp_id" />

            <EditText
                android:id="@+id/et_emp_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_name" />

            <EditText
                android:id="@+id/et_emp_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_email" />

            <EditText
                android:id="@+id/et_emp_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <EditText
                android:id="@+id/et_emp_mobile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/emp_role" />

            <RadioGroup
                android:id="@+id/rg_emp_role"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_emp_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/admin" />

                <RadioButton
                    android:id="@+id/rb_emp_faculty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/faculty" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/department" />

            <Spinner
                android:id="@+id/spnr_emp_department"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/emp_doj" />

            <EditText
                android:id="@+id/et_emp_doj"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_formate"
                android:inputType="date"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/emp_image" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_emp_image_preview"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_person_black_24dp" />

                <Button
                    android:id="@+id/btn_emp_image_pick"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_enabled"
                    android:text="@string/stud_image_choose"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/divider" />

        <Button
            android:id="@+id/btn_submit_emp_details"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_enabled"
            android:text="@string/submit"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>