<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AddStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/stud_basic_dtl"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_eno" />

            <EditText
                android:id="@+id/et_stud_enroll_no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_name" />

            <EditText
                android:id="@+id/et_stud_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_email" />

            <EditText
                android:id="@+id/et_stud_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_mobile" />

            <EditText
                android:id="@+id/et_stud_mobile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_parent_mobile" />

            <EditText
                android:id="@+id/et_stud_parent_mobile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_father_name" />

            <EditText
                android:id="@+id/et_stud_father_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_mother_name" />

            <EditText
                android:id="@+id/et_stud_mother_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_category" />

            <Spinner
                android:id="@+id/spnr_stud_category"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/stud_category_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_gender" />

            <Spinner
                android:id="@+id/spnr_stud_gender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/stud_gender_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_dob" />

            <EditText
                android:id="@+id/et_stud_dob"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_formate"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_doa" />

            <EditText
                android:id="@+id/et_stud_doa"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_formate"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_p_address" />

            <EditText
                android:id="@+id/et_stud_p_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_c_address" />

            <EditText
                android:id="@+id/et_stud_c_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_image" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_stud_image_preview"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_person_black_24dp" />
                <Button
                    android:id="@+id/btn_stud_image_pick"
                    android:layout_width="180dp"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_enabled"
                    android:text="@string/stud_image_choose"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/stud_qualification_dtl"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10th " />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_school" />

            <EditText
                android:id="@+id/et_stud_10th_school_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_pass_year" />

            <EditText
                android:id="@+id/et_stud_10th_pass_year"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="YYYY"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_percentage" />

            <EditText
                android:id="@+id/et_stud_10th_percentage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12th " />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_school" />

            <EditText
                android:id="@+id/et_stud_12th_school_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_pass_year" />

            <EditText
                android:id="@+id/et_stud_12th_pass_year"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="YYYY"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_percentage" />

            <EditText
                android:id="@+id/et_stud_12th_percentage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_stream" />

            <EditText
                android:id="@+id/et_stud_12th_stream"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="PCM/PCB"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1" />
        </LinearLayout>

        <View style="@style/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/stud_academic_dtl"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_course" />

            <Spinner
                android:id="@+id/spnr_stud_course"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_branch" />

            <Spinner
                android:id="@+id/spnr_stud_branch"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_semester" />

            <Spinner
                android:id="@+id/spnr_stud_semester"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_section" />

            <Spinner
                android:id="@+id/spnr_stud_section"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_stud_details"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_enabled"
            android:text="@string/submit"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>