<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".FeeUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/stud_eno" />

            <EditText
                android:id="@+id/et_stud_enroll_no_fee"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/receipt_no" />

            <EditText
                android:id="@+id/et_fee_receipt_no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/paid_date" />

            <EditText
                android:id="@+id/et_fee_paid_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_formate"
                android:inputType="date"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/paid_amount" />

            <EditText
                android:id="@+id/et_fee_paid_amount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/due_amount" />

            <EditText
                android:id="@+id/et_fee_due_amount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_submit_fee_update"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:background="@drawable/button_enabled"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>